# AllSidesExercice

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  main.cpp  test_hdr.py
Headers/: Constants.h  FakeCamera.h  HdrCombiner.h
Implementations/: FakeCamera.cpp  HdrCombiner.cpp
